<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:elevation="@dimen/four_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:titleTextColor="@android:color/white" />

        </com.google.android.material.appbar.AppBarLayout>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/language_cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sixteen_dp"
            app:cardCornerRadius="@dimen/four_dp"
            app:layout_constraintTop_toBottomOf="@id/appbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/language_iv"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/two00dp"
                    android:contentDescription="@string/language"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/kotlin_logo" />

                <TextView
                    android:id="@+id/language_tv"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/underdog"
                    android:textSize="@dimen/eigtheen_sp"
                    tools:text="@string/kotlin_language" />
            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/language_tips_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:fontFamily="@font/underdog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/language_cv"
            tools:text="@string/why_python" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="350dp" />

        <TextView
            android:id="@+id/name_tv"
            style="@style/address_style"
            android:text="@string/chidi_loveth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline" />

        <ImageView
            android:id="@+id/location_iv"
            style="@style/address_style"
            android:contentDescription="@string/address"
            android:src="@drawable/ic_location_on_black_24dp"
            app:layout_constraintEnd_toStartOf="@id/address_tv"
            app:layout_constraintTop_toBottomOf="@id/name_tv" />

        <TextView
            android:id="@+id/address_tv"
            style="@style/address_style"
            android:text="@string/my_address"
            app:layout_constraintStart_toStartOf="@id/name_tv"
            app:layout_constraintTop_toBottomOf="@+id/name_tv" />

        <ImageView
            android:id="@+id/email_iv"
            style="@style/address_style"
            android:contentDescription="@string/address"
            android:src="@drawable/ic_email_black_24dp"
            app:layout_constraintEnd_toStartOf="@id/email_tv"
            app:layout_constraintTop_toBottomOf="@id/address_tv" />

        <TextView
            android:id="@+id/email_tv"
            style="@style/address_style"
            android:fontFamily="@font/underdog"
            android:text="@string/my_email"
            app:layout_constraintStart_toStartOf="@id/name_tv"
            app:layout_constraintTop_toBottomOf="@+id/address_tv" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tips_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:text="@string/tips"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>